@startuml

class Cliente {
  - codigoIdentificacion
  - nombre 
  - direccion 
}

class PersonaFisica {
  - fechaNacimiento 
  - sexo 
}

class Organizacion {
  - tipoOrganizacion 
  - representante 
  - cantidadEmpleados 
}

class Sucursal {
  - numero 
  - codigoPostal 
  - ciudad 
  - empleados :Lis<>
}

class Empleado {
  - dni
  - fechaNacimiento 
  - sexo 
}

Cliente <|-- PersonaFisica
Cliente <|-- Organizacion
Sucursal "1" -- "0..*" Empleado

@enduml